--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
+  margin: 5;
+  padding: 5;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,4 +11,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+div{
+	font-family: "Ubuntu Bold";
+  padding: 5;
 }
