--- a/src/ArticleList/ArticleListItem.module.css
+++ b/src/ArticleList/ArticleListItem.module.css
@@ -1,18 +1,35 @@
 .box{
 	border:2px solid firebrick;
-	padding: 5px;
-	background: #dcdcdc;
+	border-radius: 10px;
+	padding-bottom: 20px;
+	padding-right :20px;
+	padding-left :10px;
+	background-image: linear-gradient(to right, #CD5C5C, white, white,white);
+}
+
+
+.div{
+	display: inline-block;
+	vertical-align: middle;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .title{
-	font-size: 120%;
+	font-size: 150%;
 	color:firebrick;
 
+}
+
+.p{
+	font-size: 80%;
 
 }
 
 .time{
 	font-weight: bold;
-	font-size: 80%;
+	font-size: 50%;
+
 
 }
