--- a/src/ArticleList/ArticleImage.module.css
+++ b/src/ArticleList/ArticleImage.module.css
@@ -5,6 +5,7 @@
 	border:5px solid firebrick;
 	vertical-align: middle;
 	display:inline-block;
+	float:left;
 
 /*	position: absolute;top: 10;left:10;
 */
