--- a/src/ArticleList/ArticleListItem.module.css
+++ b/src/ArticleList/ArticleListItem.module.css
@@ -1,9 +1,10 @@
+
 .box{
+	display: flex;
+	flex-flow:column;
 	border:2px solid firebrick;
 	border-radius: 10px;
-	padding-bottom: 20px;
-	padding-right :20px;
-	padding-left :10px;
+	padding-bottom: 10px;
 	background-image: linear-gradient(to right, #CD5C5C, white, white,white);
 }
 
@@ -14,10 +15,12 @@
 	padding-top: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
+	padding-bottom: 20px;
+
 }
 
 .title{
-	font-size: 150%;
+	font-size: 120%;
 	color:firebrick;
 
 }
