--- a/src/ArticleList/ArticleList.module.css
+++ b/src/ArticleList/ArticleList.module.css
@@ -1,6 +1,10 @@
 .container{
 	background: grey;
-	padding: 3px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-column-gap: 10px;
+	grid-row-gap:10px;
+	margin:20px;
 }
 
 .l{
