--- a/src/ArticleList/ArticleListItem.module.css
+++ b/src/ArticleList/ArticleListItem.module.css
@@ -1,10 +1,11 @@
 
 .box{
 	display: flex;
+	height: 100%;
+	justify-content: space-between;
 	flex-flow:column;
 	border:2px solid firebrick;
 	border-radius: 10px;
-	padding-bottom: 10px;
 	background-image: linear-gradient(to right, #CD5C5C, white, white,white);
 }
 
@@ -12,10 +13,8 @@
 .div{
 	display: inline-block;
 	vertical-align: middle;
-	padding-top: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
-	padding-bottom: 20px;
 
 }
 
